--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <p>CrabFish</p>
 <p>Get it on Google Play</p>
 <p>&nbsp;</p>
-<p>Our <a title="privacy" href="https://senselesssoftware.github.io/senselesssoftware/privacy.html">privacy policy</a></p>
+<p>Our <a title="privacy" href="https://senselesssoftware.github.io/privacy.html">privacy policy</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
