--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <p>Welcome to the home of Senseless Software</p>
 <p>Our current Apps:</p>
 <p>CrabFish</p>
-<p>Get it on Google Play</p>
+<p><img src="https://senselesssoftware.github.io/google-play-badge.png" alt="" /></p>
 <p>&nbsp;</p>
-<p>Our <a title="privacy" href="https://senselesssoftware.github.io/privacy.html">privacy policy</a></p>
+<p>Our <a title="privacy" href="https://senselesssoftware.github.io/senselesssoftware/privacy.html">privacy policy</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
