--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <h1 style="text-align: center;">Senseless Software</h1>
 <p>Welcome to the home of Senseless Software</p>
 <p>Our current Apps:</p>
-<p>CrabFish</p>
-<p><img src="https://senselesssoftware.github.io/google-play-badge.png" alt="" /></p>
+<table style="border-collapse: collapse; width: 100%;" border="1">
+<tbody>
+<tr>
+<td style="width: 33.3333%; text-align: center;">
+<h3><strong>CrabFish</strong></h3>
+</td>
+<td style="width: 33.3333%;">&nbsp;</td>
+<td style="width: 33.3333%;"><a href="https://play.google.com/store/apps/details?id=com.senselesssoftware.crabfish.crabfish&amp;pcampaignid=web_share"><img src="https://senselesssoftware.github.io/google-play-badge.png" alt="" width="199" height="77" /></a></td>
+</tr>
+<tr>
+<td style="width: 33.3333%;">&nbsp;</td>
+<td style="width: 33.3333%;">&nbsp;</td>
+<td style="width: 33.3333%;">&nbsp;</td>
+</tr>
+<tr>
+<td style="width: 33.3333%;">&nbsp;</td>
+<td style="width: 33.3333%;">&nbsp;</td>
+<td style="width: 33.3333%;">&nbsp;</td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp; &nbsp;&nbsp;</p>
 <p>&nbsp;</p>
 <p>Our <a title="privacy" href="https://senselesssoftware.github.io/senselesssoftware/privacy.html">privacy policy</a></p>
 <p>&nbsp;</p>
