--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 </table>
 <p>&nbsp; &nbsp;&nbsp;</p>
 <p>&nbsp;</p>
-<p>Our <a title="privacy" href="https://senselesssoftware.github.io/senselesssoftware/privacy.html">privacy policy</a></p>
+<p>Our <a title="privacy" href="https://senselesssoftware.github.io/privacy.html">privacy policy</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
